# atmo-access-data-access

./: README.md  pyproject.toml
atmoaccess_data_access/: helper.py  query_actris.py  query_iagos.py  query_icos.py
tests/: query_actris_demo.ipynb  query_actris_test.py  query_iagos_demo.ipynb
