[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atmo-access-data-access"
version = "0.1"
dependencies = [
  "requests >= 2.28.1",
  "pandas >= 1.5.2",
  "xarray >= 2023.7.0",
  "h5netcdf >= 1.3.0",
  "icoscp == 0.1.17",
]
requires-python = ">= 3.9"
readme = "README.md"
